--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+src/main/java/ru/kata/spring/boot_security/demo/controller/UserResource.java
 ### STS ###
 .apt_generated
 .classpath
