--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
 			<scope>runtime</scope>
 			<version>8.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
